gcc/testsuite/g++.dg/parse/friend8.C
// PR c++/35578
// Check position of error message
// { dg-do compile }

int i;

friend  // { dg-error "friend" }
  void foo();
